<resources>
    <string name="app_name">PilotZai for Pilots</string>

    <string name="label_phone_auth">Phone Number Authentication</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="login_hint">Username</string>

    <string name="hint_user_id">User ID</string>

    <string name="sign_in">Sign In</string>

    <string name="sign_out">Sign Out</string>

    <string name="about_us">About us</string>

    <string name="loading">Loading…</string>

    <string name="signed_in">Signed In</string>

    <string name="signed_out">Signed Out</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="auth_failed">Authentication failed</string>

    <string name="start_phone_auth">Start</string>

    <string name="verify_phone_auth">Verify</string>

    <string name="resend_phone_auth">Resend</string>

    <string name="hint_phone_number">Phone Number</string>

    <string name="hint_verification_code">Verification Code</string>

    <string name="status_code_sent">Code Sent</string>

    <string name="status_verification_failed">Verification failed</string>

    <string name="status_verification_succeeded">Verification succeeded</string>

    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="instant_validation">(instant validation)</string>


    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="emailpassword_status_fmt">Email User: %1$s </string>

    <string name="emailpassword_title_text"> </string>

    <string name="phone_title_text">Phone Number</string>

    <string name="email_fmt">Email: %s</string>

    <string name="decline">Decline</string>

    <string name="accept">Accept</string>

    <string name="source">Source :</string>

    <string name="dest">Destination :</string>

    <string name="fare">Fare :</string>

    <string name="end">End</string>

    <string name="maps">Open Maps</string>

    <string name="cancel">Oops! Customer cancelled the request </string>

    <string name="endJ">End Journey</string>

    <string name="otp">Enter OTP</string>

    <string name="match">Match OTP</string>

    <string name="timer">Timer</string>
    <string name="timeron">Stop looking for Customer</string>
    <string name="timeroff">Look for Customer</string>
    <string name="rideDetails">Ride Details</string>

    <string name="calculating">Calculating..</string>

    <string name="next">Next</string>

    <string name="yposition">Your Position :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc3">request accepted img</string>
    <string name="desc2">successful login img</string>
    <string name="desc1">app logo</string>

</resources>
