<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:screenOrientation="portrait"
              android:orientation="vertical"
              android:background="@color/appbackground"
              >

    <RelativeLayout
        android:id="@+id/temp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <!--logo-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            >
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="100dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/signin_logo"
            android:contentDescription="@string/desc1"
            />

    </LinearLayout>
        <!--</RelativeLayout>-->

    <!--email,pwd signin-->

    <LinearLayout
        android:id="@+id/email_password_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/field_uname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/login_hint"
            android:gravity="center"
            android:textColorHint="@color/for_helvicaR"
            android:fontFamily="helveticaRegular"
            app:backgroundTint="@color/for_helvicaR"
            android:imeOptions="actionNext"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="55dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/for_helvicaR"
            android:fontFamily="helveticaRegular"
            app:backgroundTint="@color/for_helvicaR"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:fontFamily="helveticaRegular"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:layout_marginTop="40dp" />
    </LinearLayout>
        </RelativeLayout>
    <!--tick-->
    <RelativeLayout
        android:id="@+id/tick_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/tick"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/tick_logo"
            android:layout_margin="4dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/desc2"
           />

</RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/tempdetail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView

                android:id="@+id/status"

                style="@style/ThemeOverlay.MyTextDetail"

                android:fontFamily="helveticaRegular"
                android:text="@string/signed_out"
                android:textColor="@color/for_helvicaR" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/start_stop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/timer"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/timer_border"
                android:fontFamily="ralewayRegular"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="@color/timer" />

            <ToggleButton
                android:id="@+id/toggleBtn"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:textSize="12sp"
                android:textOff="@string/timeroff"
                android:textOn="@string/timeron" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/end_journey_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:background="@drawable/background"
            android:orientation="horizontal"
            android:visibility="gone">


                <Button
                    android:id="@+id/endJourney"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_border"
                    android:fontFamily="helveticaRegular"
                    android:text="@string/endJ"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/rideDetails"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_border"
                    android:fontFamily="helveticaRegular"
                    android:text="@string/rideDetails"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp" />

        </LinearLayout>

    </RelativeLayout>

    </RelativeLayout>

    </LinearLayout>

